# myfirstapp

./: .env.example  .gitignore  LICENSE  README.md  db.sqlite3  prod_db.sqlite3  pyproject.toml  requirements.txt  start.sh
config/: settings.py  urls.py
docker/: Dockerfile  start-database.sh
mysite/: requirements.txt  settings.py  urls.py
polls/: admin.py  models.py  tests.py  urls.py  views.py
polls/migrations/: 0001_initial.py
secondapp/: admin.py  context_processors.py  forms.py  middleware.py  mixins.py  models.py  permissions.py  tests.py  urls.py  utils.py  views.py
secondapp/fixtures/secondapp/: fixtrue_instrument.json  fixture_approximatedate.json  fixture_attendance.json  fixture_attendancetype.json  fixture_eventtype.json  fixture_languagecode.json  fixture_role.json  fixture_skill.json  fixture_voice.json
secondapp/migrations/: 0001_initial.py  0002_alter_arranger_tags_alter_composer_tags_and_more.py  0002_rename_author_songs_song_author_and_more.py  0003_song_genre_alter_arranger_tags_alter_composer_tags_and_more.py  0004_alter_song_genre.py  0005_alter_composer_musical_era.py  0006_tag_date_added.py  0007_alter_tag_date_added.py  0008_alter_rehearsal_options_rehearsal_attendance_count_and_more.py  0009_alter_arranger_options_alter_composer_options_and_more.py  0010_alter_rehearsal_singers.py
secondapp/static/secondapp/: style.css
secondapp/templates/admin/: base_site.html
syncope/: admin.py  apps.py  context_processors.py  mixins.py  models.py  permissions.py  urls.py  utils.py  views.py
syncope/migrations/: 0001_initial.py
(+113 files in other folders)
